--- a/css_15_tailwind-layout-responsive/src/index.html
+++ b/css_15_tailwind-layout-responsive/src/index.html
@@ -120,7 +120,7 @@
           class="bg-emerald-400 col-span-8 w-full min-h-80 rounded-2xl"
         ></div>
         <div
-          class="bg-cyan-400 hidden 2xl:block col-span-2 w-full min-h-80 rounded-2xl"
+          class="bg-blue-400 hidden 2xl:block col-span-2 w-full min-h-80 rounded-2xl"
         ></div>
       </section>
     </main>
