--- a/js_10_DOM-manipulation/src/index.html
+++ b/js_10_DOM-manipulation/src/index.html
@@ -8,7 +8,7 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <h1>Hello.</h1>
+    <h1 class="text-2xl">Hello.</h1>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, est!
     </p>
