--- a/js_11_TO-DO_DOM/src/index.html
+++ b/js_11_TO-DO_DOM/src/index.html
@@ -17,12 +17,12 @@
         <div id="task-creator" class="grid grid-cols-12 gap-2 mt-5">
           <input
             id="inp_new-task"
-            class="col-span-8 bg-gray-50 p-2 rounded"
+            class="col-span-12 lg:col-span-8 bg-gray-50 p-2 rounded"
             placeholder="I'm going to-do..."
             type="text"
           />
           <select
-            class="col-span-2 bg-gray-50 p-2 rounded"
+            class="col-span-4 bg-gray-50 p-2 rounded"
             name="sel-priority"
             id="sel_task-priority"
           >
@@ -31,13 +31,13 @@
           </select>
           <button
             id="btn_submit-task"
-            class="col-span-2 bg-gray-50 hover:bg-orange-300 p-2 rounded cursor-pointer ease-in-out duration-200"
+            class="col-span-4 lg:col-span-3 2xl:col-span-2 bg-gray-50 hover:bg-orange-300 p-2 rounded cursor-pointer ease-in-out duration-200"
           >
             Submit task.
           </button>
           <button
             id="btn_delete"
-            class="col-start-11 col-span-2 bg-gray-50 hover:bg-orange-300 p-2 rounded cursor-pointer ease-in-out duration-200"
+            class="col-span-4 lg:col-span-3 2xl:col-span-2 bg-gray-50 hover:bg-orange-300 p-2 rounded cursor-pointer ease-in-out duration-200"
           >
             Delete selected tasks.
           </button>
@@ -46,7 +46,7 @@
       <!--- HIGH PRIORITY LIST --->
       <div
         id="high-priority-container"
-        class="bg-red-500/85 col-span-6 p-6 rounded-2xl"
+        class="bg-red-500/85 col-span-12 lg:col-span-6 p-6 rounded-2xl"
       >
         <h2 class="text-lg text-gray-50 font-bold">High priority list:</h2>
         <ul id="high-priority-list" class="bg-gray-50 rounded mt-4 p-4"></ul>
@@ -54,7 +54,7 @@
       <!--- NORMAL PRIORITY LIST --->
       <div
         id="normal-priority-container"
-        class="bg-orange-400 col-span-6 p-6 rounded-2xl"
+        class="bg-orange-400 col-span-12 lg:col-span-6 p-6 rounded-2xl"
       >
         <h2 class="text-lg text-gray-50 font-bold">Normal priority list:</h2>
         <ul id="normal-priority-list" class="bg-gray-50 rounded mt-4 p-4"></ul>
