--- a/js_12_FlappyBird-Clone/src/index.html
+++ b/js_12_FlappyBird-Clone/src/index.html
@@ -24,7 +24,7 @@
         >
       </h2>
       <section class="w-full flex justify-center">
-        <canvas id="board" class="my-4"></canvas>
+        <canvas id="idBoard" class="my-4"></canvas>
       </section>
     </main>
     <footer class="w-full h-10">
